# Gomoku

./: .gitignore  CMakeLists.txt  Log.md  README.md  gomoku_model.pt  main.py  model.py  processTrainModel.py  runModelAndReturnPoint.py  scoring.md
docs/: packaging.md  scoring.md
include/gomoku/: ai_player.h  engine.h  game_session.h  ui_controller.h  voice.h  webConnect.h
include/gomoku/ai/: ai_player.h
include/gomoku/audio/: voice.h
include/gomoku/core/: engine.h  game_session.h
include/gomoku/gui/: http_server.h
include/gomoku/net/: webConnect.h  webconnect_protocol.h
include/gomoku/ui/: ui_controller.h
python/: gomoku_net.py  model.py  processTrainModel.py  runModelAndReturnPoint.py
python/inference/: runModelAndReturnPoint.py
src/: ai_player.cpp  app.cpp  bindings.cpp  engine.cpp  game_session.cpp  main.cpp  ui_controller.cpp  voice.cpp
src/ai/: ai_player.cpp  bindings.cpp
src/app/: app.cpp  gui_main.cpp
src/audio/: voice.cpp
src/core/: engine.cpp  game_session.cpp
src/gui/: http_server.cpp
src/net/: webConnect.cpp
src/ui/: ui_controller.cpp  ui_controller_internal.h  ui_controller_state.cpp  ui_controller_views.cpp
tests/: regression_tests.cpp
tests/cpp/: reward_ai_smoke.cpp
